Adjusted tempo plot visuals, added fade ffect on x axis and changed font/spacing, fixed note display

--- a/DigiBachStylesheet.css
+++ b/DigiBachStylesheet.css
@@ -1126,7 +1126,7 @@ text-align: left;
 .noteDisplay {
     position: absolute;
     font-size: 25px;
-    left: 470px;
+    left: 430px;
     top: 390px;
     z-index: 50;
 }
